2025-07-16_15 pgsql trigger function 관리기능 추가

--- a/.env
+++ b/.env
@@ -41,8 +41,5 @@ CORS_ORIGINS=["http://localhost:3000", "http://localhost:8000"]
 # --- 파일 업로드 설정 ---
 # 이미지 등 업로드된 파일이 저장될 서버 내 디렉토리 경로
 # 이 경로는 백엔드 애플리케이션이 실행되는 컨테이너/서버 내의 경로입니다.
-# 배포 시에는 볼륨 마운트 등을 통해 영구적인 스토리지로 변경해야 합니다.
-# UPLOAD_DIR="uploaded_files"
-# 또는
-UPLOAD_DIR=./data/uploads
+UPLOAD_DIR=./app/resources
 # 또는 절대 경로 (예: /home/blue/projects/wims/backend/data/uploads)
