--- a/.gitignore
+++ b/.gitignore
@@ -28,8 +28,7 @@ openapi.json
 doc/
 init_db/
 migrations/versions/
-data/uploads/
-uploads/
+app/resources/
 
 # ------------------------------------
 # 환경 설정 파일 (민감 정보 포함)
