--- a/alembic.ini
+++ b/alembic.ini
@@ -14,7 +14,6 @@
 #     │       └── <revision_id>_<message>.py
 #     └── (다른 프로젝트 파일들)
 script_location = migrations
-sqlalchemy.url = postgresql+asyncpg://wims:wims1234@localhost:5432/test_wims_dbv1
 
 # 마이그레이션 환경 스크립트 (env.py)의 경로
 # 이 파일에서 데이터베이스 연결 및 마이그레이션 컨텍스트가 설정됩니다.
@@ -35,11 +34,12 @@ file_template = %%(rev)s_%%(slug)s
 # `env.py` 파일의 Python 경로를 지정합니다.
 # `app.migrations.env`는 `app/migrations/env.py` 파일을 가리킵니다.
 # Alembic이 마이그레이션 작업을 수행하기 전에 이 모듈을 로드합니다.
-# python_path = ..  # 현재 디렉토리(프로젝트 루트)를 PYTHONPATH에 추가하여 'app' 패키지를 찾을 수 있도록 함
 # env.py가 import app.core.config 등을 할 수 있도록 python_path 설정이 중요합니다.
+# python_path = .  # env.py에서 실행중 경로 자동 추가
+
 
 # 데이터베이스 연결 URL (여기서는 직접 설정하지 않고, env.py에서 .env 파일을 통해 로드)
-# sqlalchemy.url =
+sqlalchemy.url = postgresql+asyncpg://wims:wims1234@localhost:5432/wims_dbv1
 # 이 주석 처리된 부분은 env.py에서 app.core.config.settings.DATABASE_URL을 통해 동적으로 설정됩니다.
 
 # SQL 덤프 파일 경로 (데이터베이스 초기 스키마 생성에 사용될 수 있음)
@@ -47,6 +47,7 @@ file_template = %%(rev)s_%%(slug)s
 # 예를 들어, 최초 마이그레이션 생성 시 `create_all` 대신 이 덤프를 기반으로 스키마를 로드할 때.
 # sql_dump_file = wims_v250529_0.sql
 interpolation = none
+
 
 [loggers]
 keys = root,alembic
