--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 aiofiles==24.1.0
 alembic==1.16.2
+alembic_utils==0.8.8
 annotated-types==0.7.0
 anyio==4.9.0
 arg==0.0.1
@@ -14,6 +15,7 @@ dnspython==2.7.0
 ecdsa==0.19.1
 email_validator==2.2.0
 fastapi==0.115.7
+flupy==1.2.3
 greenlet==3.2.2
 h11==0.16.0
 hiredis==3.2.1
@@ -25,6 +27,7 @@ iniconfig==2.1.0
 Mako==1.3.10
 MarkupSafe==3.0.2
 packaging==25.0
+parse==1.20.2
 passlib==1.7.4
 pluggy==1.6.0
 psycopg2-binary==2.9.9
